--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -36,6 +36,10 @@ jobs:
   
       - name: Install dependencies  
         run: npm install puppeteer axios
+
+      - name: Disable sandbox
+        run: PUPPETEER_SKIP_CHROMIUM_SANDBOX=true node src/main.js
+
   
       - name: Login into Serv00/CT8
         run: |  
